fix z-index roomInfo in Room

--- a/src/static/stylus/room.module.styl
+++ b/src/static/stylus/room.module.styl
@@ -10,6 +10,8 @@
         height 42px
         width 340px
         margin 40px
+    & > :nth-child(2) 
+        z-index 0
 .match
     height 100%
     position relative
